[package]
name = "blockchain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
bitcoin = "0.32.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
r2d2_redis = "0.14.0"
r2d2 = "0.8"

[dependencies.redis]
version = "*"